; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_if_pflog.c_pflogstart.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/pf/extr_if_pflog.c_pflogstart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.mbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*)* @pflogstart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pflogstart(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.mbuf*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  br label %4

4:                                                ; preds = %21, %1
  %5 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %6 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %5, i32 0, i32 0
  %7 = call i32 @IF_LOCK(i32* %6)
  %8 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %9 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %8, i32 0, i32 0
  %10 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %11 = call i32 @_IF_DEQUEUE(i32* %9, %struct.mbuf* %10)
  %12 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %13 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %12, i32 0, i32 0
  %14 = call i32 @IF_UNLOCK(i32* %13)
  %15 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %16 = icmp eq %struct.mbuf* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  ret void

18:                                               ; preds = %4
  %19 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  %20 = call i32 @m_freem(%struct.mbuf* %19)
  br label %21

21:                                               ; preds = %18
  br label %4
}

declare dso_local i32 @IF_LOCK(i32*) #1

declare dso_local i32 @_IF_DEQUEUE(i32*, %struct.mbuf*) #1

declare dso_local i32 @IF_UNLOCK(i32*) #1

declare dso_local i32 @m_freem(%struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
